// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`サーチバー snapshot-valueが入力されていない 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#393e42",
        "borderBottomColor": "#000",
        "borderBottomWidth": 1,
        "borderTopColor": "#000",
        "borderTopWidth": 1,
      },
      Object {
        "backgroundColor": "#e1e8ee",
        "borderBottomColor": "#e1e1e1",
        "borderTopColor": "#e1e1e1",
      },
      Object {
        "backgroundColor": "rgba(0,0,0,0)",
        "borderBottomColor": "rgba(0,0,0,0)",
        "borderTopColor": "rgba(0,0,0,0)",
        "flex": 0.8,
      },
    ]
  }
>
  <TextInput
    onChangeText={undefined}
    onSubmitEditing={undefined}
    placeholder="植物名"
    placeholderTextColor="#86939e"
    selectionColor="#86939e"
    style={
      Array [
        Object {
          "backgroundColor": "#303337",
          "borderRadius": 3,
          "color": "#86939e",
          "fontSize": 17.5,
          "height": 30,
          "margin": 8,
          "overflow": "hidden",
          "paddingLeft": 26,
          "paddingRight": 19,
        },
        Object {
          "backgroundColor": "#bdc6cf",
        },
        false,
        Object {
          "borderRadius": 15,
        },
        Object {
          "backgroundColor": "rgb(255,255,255)",
          "fontSize": 20,
          "height": 50,
          "paddingLeft": 45,
        },
        null,
        false,
      ]
    }
    underlineColorAndroid="transparent"
    value={undefined}
  />
  <Text
    accessible={true}
    allowFontScaling={false}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#86939e",
          "fontSize": 16,
        },
        Array [
          Object {
            "backgroundColor": "transparent",
            "position": "absolute",
            "top": 15.5,
          },
          Object {
            "left": 16,
          },
          Object {
            "fontSize": 30,
            "top": 17.5,
            "width": 30,
          },
        ],
        Object {
          "fontFamily": "Material Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`サーチバー snapshot-valueに値が入力されている 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#393e42",
        "borderBottomColor": "#000",
        "borderBottomWidth": 1,
        "borderTopColor": "#000",
        "borderTopWidth": 1,
      },
      Object {
        "backgroundColor": "#e1e8ee",
        "borderBottomColor": "#e1e1e1",
        "borderTopColor": "#e1e1e1",
      },
      Object {
        "backgroundColor": "rgba(0,0,0,0)",
        "borderBottomColor": "rgba(0,0,0,0)",
        "borderTopColor": "rgba(0,0,0,0)",
        "flex": 0.8,
      },
    ]
  }
>
  <TextInput
    onChangeText={undefined}
    onSubmitEditing={undefined}
    placeholder="植物名"
    placeholderTextColor="#86939e"
    selectionColor="#86939e"
    style={
      Array [
        Object {
          "backgroundColor": "#303337",
          "borderRadius": 3,
          "color": "#86939e",
          "fontSize": 17.5,
          "height": 30,
          "margin": 8,
          "overflow": "hidden",
          "paddingLeft": 26,
          "paddingRight": 19,
        },
        Object {
          "backgroundColor": "#bdc6cf",
        },
        false,
        Object {
          "borderRadius": 15,
        },
        Object {
          "backgroundColor": "rgb(255,255,255)",
          "fontSize": 20,
          "height": 50,
          "paddingLeft": 45,
        },
        false,
        Object {
          "paddingRight": 30,
        },
      ]
    }
    underlineColorAndroid="transparent"
    value="ひまわり"
  />
  <Text
    accessible={true}
    allowFontScaling={false}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#86939e",
          "fontSize": 16,
        },
        Array [
          Object {
            "backgroundColor": "transparent",
            "position": "absolute",
            "top": 15.5,
          },
          Object {
            "left": 16,
          },
          Object {
            "fontSize": 30,
            "top": 17.5,
            "width": 30,
          },
        ],
        Object {
          "fontFamily": "Material Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
      ]
    }
  >
    
  </Text>
  <Text
    accessible={true}
    allowFontScaling={false}
    disabled={false}
    ellipsizeMode="tail"
    onPress={[Function]}
    style={
      Array [
        Object {
          "color": "#86939e",
          "fontSize": 16,
        },
        Array [
          Object {
            "backgroundColor": "transparent",
            "position": "absolute",
            "top": 15.5,
          },
          Object {
            "right": 16,
          },
          Object {
            "fontSize": 30,
            "top": 17.5,
            "width": 30,
          },
        ],
        Object {
          "fontFamily": "Material Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`サーチバー snapshot-普通 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#393e42",
        "borderBottomColor": "#000",
        "borderBottomWidth": 1,
        "borderTopColor": "#000",
        "borderTopWidth": 1,
      },
      Object {
        "backgroundColor": "#e1e8ee",
        "borderBottomColor": "#e1e1e1",
        "borderTopColor": "#e1e1e1",
      },
      Object {
        "backgroundColor": "rgba(0,0,0,0)",
        "borderBottomColor": "rgba(0,0,0,0)",
        "borderTopColor": "rgba(0,0,0,0)",
        "flex": 0.8,
      },
    ]
  }
>
  <TextInput
    onChangeText={undefined}
    onSubmitEditing={undefined}
    placeholder={undefined}
    placeholderTextColor="#86939e"
    selectionColor="#86939e"
    style={
      Array [
        Object {
          "backgroundColor": "#303337",
          "borderRadius": 3,
          "color": "#86939e",
          "fontSize": 17.5,
          "height": 30,
          "margin": 8,
          "overflow": "hidden",
          "paddingLeft": 26,
          "paddingRight": 19,
        },
        Object {
          "backgroundColor": "#bdc6cf",
        },
        false,
        Object {
          "borderRadius": 15,
        },
        Object {
          "backgroundColor": "rgb(255,255,255)",
          "fontSize": 20,
          "height": 50,
          "paddingLeft": 45,
        },
        null,
        false,
      ]
    }
    underlineColorAndroid="transparent"
    value={undefined}
  />
  <Text
    accessible={true}
    allowFontScaling={false}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#86939e",
          "fontSize": 16,
        },
        Array [
          Object {
            "backgroundColor": "transparent",
            "position": "absolute",
            "top": 15.5,
          },
          Object {
            "left": 16,
          },
          Object {
            "fontSize": 30,
            "top": 17.5,
            "width": 30,
          },
        ],
        Object {
          "fontFamily": "Material Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
      ]
    }
  >
    
  </Text>
</View>
`;
